tests/NormalTests/paczka1/small_fuzzy/27900635.err
Error in line 12: Vg8rSs5tiN A521 96,1
Error in line 14: RSwY S498 50,0
